[tool.poetry]
name = "my-health-check"
version = "0.1.0"
description = "Health check for my local docker servers"
authors = ["Your Name <you@example.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["http2"], version = "^0.23.0"}
pyee = "^9.0.4"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"